--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -80,6 +80,7 @@
 
     <label for="avatar">Avatar URL:</label>
     <input type="text" id="avatar" name="avatar">
+    <input type="customer" id="role" name="role" hidden value="customer">
 
    
 
