profile is failing

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -9,14 +9,6 @@
     h1 {
       color: #333;
     }
-    form {
-      max-width: 500px;
-      margin: 0 auto;
-      background-color: #fff;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
     label {
       display: block;
       margin-bottom: 5px;
@@ -40,16 +32,36 @@
     input[type="submit"]:hover {
       background-color: #479bf5;
     }
+    .profile-form{
+      max-width: 60%;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      border: 1px solid #ccc;
+      background-color: #fff;
+    }
+
+    .form-container{  
+      padding: 20px;
+      border-radius: 5px;
+    }
+
+    .form-container.addressInfo{
+      flex-grow: 2;
+    }
+    .form-container.userInfo{
+      flex-grow: 1;
+    }
   </style>
 </head>
 <body>
   <h1 class="title">Update User Profile</h1>
-  <form action="/update-profile" method="post">
+  <form class="profile-form" id="form" action="/api/user/profile" method="POST">
+      
+    <input name="_method" type="hidden" value="PUT">
+     <div class="form-container userInfo">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" value="<%= user.username %>" required>
-
-    <label for="addresses">Addresses:</label>
-    <input type="text" id="addresses" name="addresses" value="<%= user.addresses.join(', ') %>" required>
 
     <label for="firstName">First Name:</label>
     <input type="text" id="firstName" name="firstName" value="<%= user.firstName %>" required>
@@ -65,7 +77,93 @@
 
     <!-- Add other profile fields here -->
 
-    <input type="submit" value="Update Profile">
+    <input type="submit" value="Update Profile"  id="submitBtn">
+  </div>
+  <div class="form-container addressInfo">
+    <label for="city">city:</label>
+    <input type="text" id="city" name="addresses[city]" value="" required>
+
+    <label for="country">Country:</label>
+    <input type="text" id="country" name="addresses[country]" value="" required>
+
+    <label for="street">Street</label>
+    <input type="text" id="street" name="street" value="" required>
+
+    <label for="block">Block:</label>
+    <input type="block" id="block" name="block" value="" required>
+
+    <label for="postalCode">Postal Code:</label>
+    <input type="text" id="postalCode" name="postalCode" value="" required>
+
+    <label for="apartment">Apartment:</label>
+    <input type="text" id="apartment" name="apartment" value="" required>
+  </div>
   </form>
 </body>
+
+<script>
+ const form = document.getElementById("form");
+
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  let username = document.getElementById("username").value;
+  let firstName = document.getElementById("firstName").value;
+  let lastName = document.getElementById("lastName").value;
+  let email = document.getElementById("email").value;
+  let city = document.getElementById("city").value;
+  let country = document.getElementById("country").value;
+  let street = document.getElementById("street").value;
+  let block = document.getElementById("block").value;
+  let postalCode = document.getElementById("postalCode").value;
+  let apartment = document.getElementById("apartment").value;
+  //let isDefault = document.getElementById("isDefault").value;
+
+  try {
+        const response = await fetch(`api/user/profile`, {
+          method: 'PUT',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ 
+            username: username,
+            name: username,
+            firstName: firstName,
+            lastName: lastName,
+            email: email,
+            addresses : [{
+              street: street,
+              city: city,
+              country: country,
+              block: block,
+              postalCode: postalCode,
+              apartment: apartment,
+              isDefault: false
+          }]}),
+          credentials: 'same-origin' 
+        });
+  
+        if (!response.ok) {
+          throw new Error('Failed to update user.');
+        }
+        console.log(response.response)
+        alert('user was updated'); 
+        location.reload();
+      } catch (error) {
+        console.error('Error adding to cart:', error);
+        alert('Failed to update the user. Please try again.');
+      }
+  if (username.value == "" || firstName.value == "") {
+    alert("Ensure you input a value in both fields!");
+  } else {
+    // perform operation with form input
+    alert("This form has been successfully submitted!");
+    console.log(
+      `This form has a username of ${username.value} and password of ${firstName.value}`
+    );  
+
+  }
+});
+
+</script>
 </html>
