--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,73 +2,14 @@
 <html>
 <head>
   <title>List of Dishes</title>
+  <!-- <link rel="stylesheet" href="/css/bootstrap.min.css" /> -->
+  <!-- <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <%- include('header') %>    
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    h1 {
-      margin: 20px;
-      font-size: 36px;
-      text-align: center;
-    }
-    ul {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      list-style: none;
-      padding: 0;
-      margin: 0 auto;
-      width: 80%;
-      row-gap: 10px;
-    }
-    li {
-      flex-grow: 1;
-      border-radius: 5px;
-      padding: 20px;
-      margin-bottom: 20px;
-  
-    }
-    .list-item{
-      padding: 20px;
-      background-color: #f9f9f9;
-      border: 1px solid #ccc;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    h2 {
-      font-size: 24px;
-      margin: 0;
-    }
-    p {
-      margin: 5px 0;
-    }
-    h3 {
-      font-size: 20px;
-      margin: 10px 0;
-    }
-    ul.reviews {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    ul.reviews li {
-      padding: 10px;
-      border-bottom: 1px solid #ccc;
-    }
-
-   
-
-   
-
-    .btn :hover{
-      width: 3%;
-    }
-
-  </style>
 </head>
 <body>
+
   <h1>List of Dishes</h1>
   <ul>
     <% dishes.forEach((dish) => { %>
