--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -2,7 +2,17 @@
 <html>
 <head>
   <title>Cooks Kingdom</title>
-
+  <style>
+    .navbar-toggler {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 1rem; /* Adjust as needed */
+    }
+  </style>
+</head>
+  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
   <header>
@@ -18,11 +28,11 @@
         </button>
         <% if (user) { %>
           <!-- User is logged in -->
-          <div class="user-info">
+          <div >
             <% if (user.avatar) { %>
             <img src="<%= user.avatar %>" alt="Profile Picture">
             <% } %>  
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse container-fluid justify-content-between" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
@@ -34,7 +44,10 @@
               <a class="nav-link" href="/cart">Cart</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/orders">Orders</a>
+              <a class="nav-link pe-5" href="/orders">Orders</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/">Welcome, <%= user.username %></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
@@ -56,32 +69,6 @@
         <% } %>  
       </div>
     </nav>
-  </header>
-  <header>
-    <a href="/"> <h1>Cooks Kingdom</h1></a>
-   
-    <% if (user) { %>
-      <!-- User is logged in -->
-      <div class="user-info">
-        <% if (user.avatar) { %>
-        <img src="<%= user.avatar %>" alt="Profile Picture">
-        <% } %>  
-      
-        <a href="#" id="welcomeLink">Welcome, <%= user.username %></a>
-        <div id="userDropdown" style="display: none;">
-          <a href="/profile">Profile</a>
-          <a href="/cart">Cart</a>
-          <a href="/order">Orders</a>
-          <a href="/logout">Logout</a>
-        </div>
-      </div>
-    <% } else { %>
-      <!-- User is not logged in -->
-      <div class="auth-buttons">
-        <a href="/login">Login</a>
-        <a href="/signup">Signup</a>
-      </div>
-    <% } %>  
   </header>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
