--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,11 +5,28 @@
   <!-- <link rel="stylesheet" href="/css/bootstrap.min.css" /> -->
   <!-- <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
 
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    .content {
+      flex: 1;
+    }
+  </style>
   <%- include('header') %>    
 </head>
 <body>
-
+  <div class="wrapper">
+   <div>
   <h1>List of Dishes</h1>
   <ul>
     <% dishes.forEach((dish) => { %>
@@ -120,6 +137,8 @@
     }
     }
   </script>
-
+  </div> 
+  <%- include('footer') %>    
+</div>
 </body>
 </html>
