--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -8,13 +8,15 @@
     <div class="row">
       <div class="col-lg-3 col-md-12 mb-1 mb-md-0">
        <i class="fa-solid fa-location-dot fa-2x pb-3"></i>
-        <h5 >Team</h5class>
+        <div class="ps-3">
+        <h5 >Team</h5>
+        </div>
          <ul>
             <li> Mahmoud Alshahin</li>
-            <li> Mahmoud Alshahin</li>
-            <li> Mahmoud Alshahin</li>
-            <li> Mahmoud Alshahin</li>
-            <li> Mahmoud Alshahin</li>
+            <li> Hisham Al Wattar</li>
+            <li> Ahmad Alashtar</li>
+            <li> Rawan Mustafa</li>
+            <li> Sakarie Ali</li>
          </ul>  
            
       </div>
