add github accounts

--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -29,8 +29,11 @@
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
         <i class="fa-solid fa-phone-volume fa-2x pb-3"></i>
         <h5>Call Me </h5>
-        <a href="https://api.whatsapp.com/send/?phone=905551669950&text&type=phone_number&app_absent=0" class="link-info pe-3">00905551669950</a>
-        <a href="https://api.whatsapp.com/send/?phone=00905551669951&text&type=phone_number&app_absent=0" class="link-info">00905551669951</a>
+        <a href="https://github.com/mahmoudsha" class="link-info pe-3">https://github.com/mahmoudsha</a>
+        <a href="https://github.com/0Rawan" class="link-info">https://github.com/0Rawan</a>
+        <a href="https://github.com/ahmadalashtar" class="link-info">https://github.com/ahmadalashtar</a>
+        <a href="https://github.com/HishamWattar" class="link-info">https://github.com/HishamWattar</a>
+        <a href="https://github.com/sack-ali" class="link-info">https://github.com/sack-ali</a>
       </div>
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
       
