--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -29,11 +30,18 @@
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
         <i class="fa-solid fa-phone-volume fa-2x pb-3"></i>
         <h5>Call Me </h5>
-        <a href="https://github.com/mahmoudsha" class="link-info pe-3">https://github.com/mahmoudsha</a>
-        <a href="https://github.com/0Rawan" class="link-info">https://github.com/0Rawan</a>
-        <a href="https://github.com/ahmadalashtar" class="link-info">https://github.com/ahmadalashtar</a>
-        <a href="https://github.com/HishamWattar" class="link-info">https://github.com/HishamWattar</a>
-        <a href="https://github.com/sack-ali" class="link-info">https://github.com/sack-ali</a>
+        <ul>
+            <li> <a href="https://github.com/mahmoudsha" class="link-info pe-3"><i class="fa-brands fa-github"> Mahmoud Alshahin</i></a></li>
+            <li> <a href="https://github.com/0Rawan" class="link-info"><i class="fa-brands fa-github">Rawan Mustafa</i> </a></li>
+            <li> <a href="https://github.com/ahmadalashtar" class="link-info"><i class="fa-brands fa-github">Ahmad Alashtar</i> </a></li>
+            <li> <a href="https://github.com/HishamWattar" class="link-info"> <i class="fa-brands fa-github">Hisham Al Wattar</i> </a></li>
+            <li> <a href="https://github.com/sack-ali" class="link-info"><i class="fa-brands fa-github">Sakarie Ali</i> </a></li>
+        </ul>
+       
+       
+       
+       
+       
       </div>
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
       
