--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -8,7 +8,7 @@
     <div class="container p-4">
     <div class="row">
       <div class="col-lg-3 col-md-12 mb-1 mb-md-0">
-       <i class="fa-solid fa-location-dot fa-2x pb-3"></i>
+        <i class="fa-solid fa-people-group fa-2x pb-3 ps-3"></i>
         <div class="ps-3">
         <h5 >Team</h5>
         </div>
@@ -22,13 +22,13 @@
            
       </div>
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
-        <i class="fa-regular fa-envelope fa-2x pb-3" ></i>
+        <i class="fa-regular fa-envelope fa-2x pb-3 ps-3" ></i>
         <h5>Email</h5>
         <a href="#" class="link-info pt-3">info@service-ist.com</a>
         <a href="#" class="link-info">system@service-ist.com</a>
       </div>
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
-        <i class="fa-solid fa-phone-volume fa-2x pb-3"></i>
+        <i class="fa-solid fa-phone-volume fa-2x pb-3 ps-3"></i>
         <h5>Call Me </h5>
         <ul>
             <li> <a href="https://github.com/mahmoudsha" class="link-info pe-3"><i class="fa-brands fa-github"> Mahmoud Alshahin</i></a></li>
@@ -52,8 +52,6 @@
           <button type="button" class="btn btn-warning" onclick="location.href='#'"><i class="fa-solid fa-house" ></i></button>
           <button type="button" class="btn btn-primary" onclick="location.href='https://www.facebook.com/servicefromistanbul'"><i class="fa-brands fa-facebook"></i></button>
         </div>
-     
-        <a href="https://ar.service-ist.com/privacy-policy/" class="link-danger ">privacy-policy</a>       
         </div>
       </div>
     </div>
