--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -24,8 +24,18 @@
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
         <i class="fa-regular fa-envelope fa-2x pb-3 ps-3" ></i>
         <h5>Email</h5>
-        <a href="#" class="link-info pt-3">info@service-ist.com</a>
-        <a href="#" class="link-info">system@service-ist.com</a>
+        <ul>
+            <li>
+                <a href="mailto:mahmoudshaheen198811@gmail.com" class="link-info pt-3"><i class="fa-solid fa-envelope"></i>  Mahmoud Alshahin</a>
+            </li>
+            <li>
+                <a href="mailto:ahmadalashtar@gmail.com" class="link-info"><i class="fa-solid fa-envelope"></i> Ahmad Alashtar</a>
+
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
       </div>
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
         <i class="fa-solid fa-phone-volume fa-2x pb-3 ps-3"></i>
@@ -44,14 +54,16 @@
        
       </div>
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
-      
+        <i class="fa-brands fa-linkedin-in fa-2x pb-3 ps-3"></i>
         <h5> Contact Us </h5>
        
-        <div class="btn-group pb-3 pt-3" role="group" aria-label="Basic mixed styles example">
-          <button type="button" class="btn btn-danger" onclick="location.href=' https://www.youtube.com/channel/UCV_XqFPSyDwBvkUIZbJtlBQ'"><i class="fa-brands fa-youtube "></i></button>
-          <button type="button" class="btn btn-warning" onclick="location.href='#'"><i class="fa-solid fa-house" ></i></button>
-          <button type="button" class="btn btn-primary" onclick="location.href='https://www.facebook.com/servicefromistanbul'"><i class="fa-brands fa-facebook"></i></button>
-        </div>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/mahmoud-alshahin-887372251/" class="link-info"> <i class="fa-brands fa-linkedin"></i> Mahmoud Alshahin</a></li>
+            <li><a href="https://linkedin.com/in/ahmadalashtar" class="link-info"><i class="fa-brands fa-linkedin"></i> Ahmad Alashtar</a></li>
+            <li><a href="" class="link-primary"></a> <i class="fa-brands fa-linkedin"></i> team likdein</li>
+            <li><a href="" class="link-primary"></a> <i class="fa-brands fa-linkedin"></i> team likdein</li>
+            <li><a href="" class="link-primary"></a> <i class="fa-brands fa-linkedin"></i> team likdein</li>
+        </ul>
         </div>
       </div>
     </div>
