--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -32,9 +32,15 @@
                 <a href="mailto:ahmadalashtar@gmail.com" class="link-info"><i class="fa-solid fa-envelope"></i> Ahmad Alashtar</a>
 
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+                <a href="mailto:ahmadalashtar@gmail.com" class="link-info"><i class="fa-solid fa-envelope"></i> Ahmad Alashtar</a>
+            </li>
+            <li>
+                <a href="mailto:ahmadalashtar@gmail.com" class="link-info"><i class="fa-solid fa-envelope"></i> Ahmad Alashtar</a>
+            </li>
+            <li>
+                <a href="mailto:ahmadalashtar@gmail.com" class="link-info"><i class="fa-solid fa-envelope"></i> Ahmad Alashtar</a>
+            </li>
         </ul>
       </div>
       <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
@@ -60,9 +66,9 @@
         <ul>
             <li><a href="https://www.linkedin.com/in/mahmoud-alshahin-887372251/" class="link-info"> <i class="fa-brands fa-linkedin"></i> Mahmoud Alshahin</a></li>
             <li><a href="https://linkedin.com/in/ahmadalashtar" class="link-info"><i class="fa-brands fa-linkedin"></i> Ahmad Alashtar</a></li>
-            <li><a href="" class="link-primary"></a> <i class="fa-brands fa-linkedin"></i> team likdein</li>
-            <li><a href="" class="link-primary"></a> <i class="fa-brands fa-linkedin"></i> team likdein</li>
-            <li><a href="" class="link-primary"></a> <i class="fa-brands fa-linkedin"></i> team likdein</li>
+            <li><a href="https://linkedin.com/in/ahmadalashtar" class="link-info"><i class="fa-brands fa-linkedin"></i> Ahmad Alashtar</a></li>
+            <li><a href="https://linkedin.com/in/ahmadalashtar" class="link-info"><i class="fa-brands fa-linkedin"></i> Ahmad Alashtar</a></li>
+            <li><a href="https://linkedin.com/in/ahmadalashtar" class="link-info"><i class="fa-brands fa-linkedin"></i> Ahmad Alashtar</a></li>
         </ul>
         </div>
       </div>
