fixing font error

--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -47,11 +47,11 @@
         <i class="fa-solid fa-phone-volume fa-2x pb-3 ps-3"></i>
         <h5>Call Me </h5>
         <ul>
-            <li> <a href="https://github.com/mahmoudsha" class="link-info pe-3"><i class="fa-brands fa-github"> Mahmoud Alshahin</i></a></li>
-            <li> <a href="https://github.com/0Rawan" class="link-info"><i class="fa-brands fa-github">Rawan Mustafa</i> </a></li>
-            <li> <a href="https://github.com/ahmadalashtar" class="link-info"><i class="fa-brands fa-github">Ahmad Alashtar</i> </a></li>
-            <li> <a href="https://github.com/HishamWattar" class="link-info"> <i class="fa-brands fa-github">Hisham Al Wattar</i> </a></li>
-            <li> <a href="https://github.com/sack-ali" class="link-info"><i class="fa-brands fa-github">Sakarie Ali</i> </a></li>
+            <li> <a href="https://github.com/mahmoudsha" class="link-info pe-3"><i class="fa-brands fa-github"></i> Mahmoud Alshahin</a></li>
+            <li> <a href="https://github.com/0Rawan" class="link-info"><i class="fa-brands fa-github"></i> Rawan Mustafa</a></li>
+            <li> <a href="https://github.com/ahmadalashtar" class="link-info"><i class="fa-brands fa-github"></i> Ahmad Alashtar</a></li>
+            <li> <a href="https://github.com/HishamWattar" class="link-info"> <i class="fa-brands fa-github"></i> Hisham Al Wattar</a></li>
+            <li> <a href="https://github.com/sack-ali" class="link-info"><i class="fa-brands fa-github"></i> Sakarie Ali</a></li>
         </ul>
        
        
