--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -57,11 +57,6 @@
       padding: 10px;
       border-bottom: 1px solid #ccc;
     }
-
-   
-
-   
-
     .btn :hover{
       width: 3%;
     }
@@ -77,15 +72,19 @@
         <h2><%= dish.name %></h2> 
         <p>Description: <%= dish.description %></p>
         <p>Price: $<%= dish.price.toFixed(2) %></p>
-        <button class="add-to-cart-btn" onclick="addToCart('<%= dish._id %>')">Add to Cart</button>
-        <div id="quantityContainer">
-          <button class="plut btn" onclick="plusCart('<%= dish._id %>')">+</button>
-          <input type="number" value="1" disabled>
-          <button class="minus btn" onclick="minus('<%= dish._id %>')">-</button>
-        </div>
-        <input type="number" value="1" hidden>
-         </div>
-      </li>
+        <% if (user) { %>
+          <% if (user.role === 'customer') { %>
+            <button class="add-to-cart-btn" onclick="addToCart('<%= dish._id %>')">Add to Cart</button>
+            <div id="quantityContainer">
+              <button class="plut btn" onclick="plusCart('<%= dish._id %>')">+</button>
+              <input type="number" value="1" disabled>
+              <button class="minus btn" onclick="minus('<%= dish._id %>')">-</button>
+            </div>
+            <input type="number" value="1" hidden>
+            </div>
+          </li>
+       <% } %>  
+      <% } %>  
     <% }) %>
   </ul>
   <script>
